# IdTools

./: .gitignore  README.md  idtool.py  providers.jsonl  pyproject.toml  reqirements.txt  requirements.txt
idtool/adapters/id_providers/: ksuid_provider.py  sha256_provider.py  ulid_provider.py  uuid4_provider.py
idtool/adapters/repositories/: jsonl_repository.py  sqlite_repository.py
idtool/application/: services.py
idtool/application/use_cases/: generate_ids.py  list_ids.py
idtool/config/: config.py
idtool/domain/: entities.py  ports.py  types.py
idtool/entrypoints/: cli.py
